# Prodigy

./: .gitignore  Cargo.toml  README.md  pyproject.toml
configs/: default.toml
crates/executor/: Cargo.toml
crates/executor/src/: bitget.rs  config.rs  control.rs  daemon.rs  db.rs  executor.rs  lib.rs  main.rs  manual_override.rs  notify.rs  reconcile.rs  risk.rs  state.rs  telegram_query.rs  types.rs
crates/executor/tests/: bitget_demo.rs
docs/superpowers/checklists/: 2026-07-06-m8-prelive-readiness.md  2026-07-07-m8-demo-to-live-switch.md
reports/: m6-demo-smoke-20260705T223156939331Z.md  m6-demo-smoke-20260706T041849122567Z.md
research/notebooks/: 00_data_check.ipynb  01_example_momentum_factor.ipynb  02_example_funding_factor.ipynb  03_example_volatility_factor.ipynb  99_combine_example_factors.ipynb
schema/: 001_initial.sql  002_execution.sql
src/prodigy/: config.py  db.py
src/prodigy/cli/: __init__.py  data.py  ml.py  (+2 more)
tests/: test_backfill.py  test_backtester.py  test_bar_simulator.py  test_bitget_rest.py  test_ccxt_fetcher.py  test_config.py  test_data_quality.py  test_db_schema.py  test_evaluator.py  test_example_factors.py  test_example_trainer.py  test_executor_integration.py  test_first_milestone_smoke.py  test_ml_labels_splits.py  test_package_import.py  test_parquet_store.py  test_project_layout.py  test_research_notebooks.py  test_research_signals.py  test_second_milestone_smoke.py  test_signal_cli.py  test_signal_daemon.py  test_signal_state.py  test_smoke_report.py  test_telegram_service.py  test_trade_intents.py  test_trainer.py
(+45 files in other folders)
