[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prodigy-quant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "ccxt>=4.4.0",
  "lightgbm>=4.5.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "pytest>=8.0.0",
]

[project.scripts]
prodigy-data = "prodigy.cli.data:main"
prodigy-ml = "prodigy.cli.ml:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
